--- a/package.xml
+++ b/package.xml
@@ -24,6 +24,9 @@
    <dep type="php" rel="ge" version="4.3"/>
    <dep type="php" rel="le" version="6.0"/>
   </deps>
+  <configureoptions>
+   <configureoption name="with-ares" default="yes" prompt="whether to enable asynchronous resolver support"/>
+  </configureoptions>
   <filelist>
    <dir name="tests">
     <file role="test" name="001.phpt"/>
@@ -34,6 +37,7 @@
    <file role="src" name="config.m4"/>
    <file role="doc" name="CREDITS"/>
    <file role="doc" name="EXPERIMENTAL"/>
+   <file role="doc" name="LICENSE"/>
    <file role="src" name="php_ares.h"/>
   </filelist>
  </release>
